[package]
name = "space_time_rewind"
version = "0.1.0"
authors = ["andornaut"]
description = """
Space-Time-Rewind! (STR) is an arcade game where you pilot a spaceship on adventures through space and time
"""
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andornaut/space-time-rewind"

[dependencies]
anyhow = "~1.0"
chrono = { version = "~0.4", features = ["serde"] }
crossterm = { version = "0.20", features = ["serde"] }
rand = "~0.8"
serde = {version = "~1.0", features = ["derive"] }
serde_json = "~1.0"
termion = "~1.5.6"

# Install from git until 0.17 is released, which is needed for this change:
# https://github.com/fdehau/tui-rs/issues/529
tui = { git ="https://github.com/fdehau/tui-rs", default-features = false, features = ["crossterm", "serde"] }
