[package]
name = "space_time_rewind"
version = "0.1.0"
authors = ["andornaut"]
description = """
Space-Time-Rewind! (STR) is an arcade game where you pilot a spaceship on adventures through space and time
"""
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/andornaut/space-time-rewind"

[dependencies]
anyhow = "~1.0"
crossterm = "0.22

# Install from git until 0.17 is released, which is needed for this change:
# https://github.com/fdehau/tui-rs/issues/529
tui = { git="https://github.com/fdehau/tui-rs", default-features=false, features=["crossterm"] }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
lto = true        # Enable Link Time Optimization
opt-level = 'z'   # Optimize for size.
panic = 'abort'   # Abort on panic
strip = true      # Symbols from Binary
